# sovereign-memory-demo

./: .cursorrules  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  commit-message.txt  pyproject.toml
backend/: README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py  content_filters.py
backend/app/api/: __init__.py  dependencies.py  routes.py  schemas.py
backend/app/models/: __init__.py  base.py  dataset_schemas.py  document.py  evidence.py  receipt.py  record.py
backend/app/receipts/: __init__.py  hashing.py  seal.py
backend/app/repositories/: __init__.py  database.py  memory_repository.py
backend/app/sdk/: __init__.py  boundary.py
backend/app/services/: __init__.py  dataset_service.py  exceptions.py  memory_service.py  receipt_service.py
backend/config/: airlock_policy.yaml
backend/tests/: conftest.py  test_api_routes.py  test_dataset_service.py  test_main.py  test_memory_service.py  test_receipt_service.py  tmp_ledger.db
datasets/: accession_records.json  curator_notes.md  photograph_catalog.json  property_ledger_1908.txt
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: index.css  main.tsx
frontend/src/components/: AnswerPanel.tsx  EvidencePanel.tsx  Panel.css  QuestionPanel.tsx  ReceiptPanel.css  ReceiptPanel.tsx
frontend/src/pages/: Home.css  Home.tsx
frontend/src/services/: api.ts
frontend/src/styles/: handbook-tokens.css
frontend/src/types/: api.ts
memory_store/.sovereign_keys/: sovereign_identity.pem  sovereign_identity.pub
