[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "sovereign-memory-demo-backend"
version = "0.1.0"
description = "Backend services for the Sovereign Memory Demo reference implementation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "pydantic>=2.0",
    "pyyaml",
    "sovereign-sdk-airlock>=1.4.0",
    "sovereign-sdk-core>=1.3.0",
    "sovereign-sdk-ledger>=1.3.0",
    "sovereign-sdk-sieve>=1.3.0",
    "sqlalchemy",
    "uvicorn",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
